# e-commerce

./: .gitignore  .pre-commit-config.yaml  README.md  REFACTORING_SUMMARY.md  pyproject.toml  requirements.txt
.github/workflows/: code-quality.yml  main.yml
e-commerce-data-pipeline-portfolio/: .gitignore  GITLAB_CI_IMPLEMENTATION.md  GITLAB_CI_SETUP.md  README.md  metadata.json  package-lock.json
e-commerce-data-pipeline-portfolio/.github/workflows/: pipeline.yml
e-commerce-data-pipeline-portfolio/pipeline/airflow/dags/: ecommerce_pipeline_dag.py
e-commerce-data-pipeline-portfolio/pipeline/dbt/: dbt_project.yml  profiles.yml
e-commerce-data-pipeline-portfolio/pipeline/dbt/models/: schema.yml
e-commerce-data-pipeline-portfolio/pipeline/dbt/models/marts/: fact_orders.sql
e-commerce-data-pipeline-portfolio/pipeline/dbt/models/staging/: stg_orders.sql
e-commerce-data-pipeline-portfolio/pipeline/ingestion/: fetch_api_data.py  generate_inventory.py
e-commerce-data-pipeline-portfolio/pipeline/snowflake/: copy_into.sql  load_to_snowflake.py  setup.sql
e-commerce-data-pipeline-portfolio/pipeline/spark/: transform_data.py
e-commerce-data-pipeline-portfolio/src/: App.tsx
